--- a/argus/extension/sidepanel.html
+++ b/argus/extension/sidepanel.html
@@ -265,7 +265,7 @@
     <button class="quick-btn" data-query="Any pending tasks?">✅ Pending</button>
     <button class="quick-btn" data-query="What subscriptions should I cancel?">💳 Subscriptions</button>
     <button class="quick-btn" data-query="Any gift ideas from my chats?">🎁 Gift ideas</button>
-    <button class="quick-btn" data-query="What did Rahul recommend?">💡 Recommendations</button>
+    <button class="quick-btn" data-query="Show all recommendations from friends">💡 Recommendations</button>
   </div>
 
   <div class="messages" id="messages">
