--- a/argus/src/public/index.html
+++ b/argus/src/public/index.html
@@ -74,6 +74,8 @@
     .badge-reminded { background: rgba(163, 113, 247, 0.2); color: var(--purple); }
     .badge-completed { background: rgba(63, 185, 80, 0.2); color: var(--success); }
     .badge-expired { background: rgba(248, 81, 73, 0.2); color: var(--danger); }
+    .badge-dismissed { background: rgba(139, 148, 158, 0.2); color: var(--text-secondary); }
+    .badge-pending { background: rgba(210, 153, 34, 0.2); color: var(--warning); }
     .badge-info { background: rgba(88, 166, 255, 0.2); color: var(--accent); }
     .badge-sent { background: rgba(163, 113, 247, 0.2); color: var(--purple); }
     .badge-received { background: rgba(63, 185, 80, 0.2); color: var(--success); }
@@ -240,6 +242,14 @@
               <pre id="message-result" style="margin-top: 16px; padding: 12px; background: var(--bg-tertiary); border-radius: 6px; overflow-x: auto; font-size: 0.85rem;"></pre>
             </div>
           </div>
+          <div class="card">
+            <div class="card-header"><span class="card-title">🤖 AI Chat Test</span></div>
+            <div class="card-body padded">
+              <div class="form-group"><label class="form-label">Ask Argus AI</label><textarea id="test-chat" rows="3" placeholder="What events do I have coming up?"></textarea></div>
+              <button class="btn btn-primary" onclick="testChat()">Send</button>
+              <pre id="chat-result" style="margin-top: 16px; padding: 12px; background: var(--bg-tertiary); border-radius: 6px; overflow-x: auto; font-size: 0.85rem; white-space: pre-wrap;"></pre>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -252,15 +262,20 @@
             <pre style="background: var(--bg-tertiary); padding: 16px; border-radius: 6px; font-size: 0.85rem;">
 Argus API Endpoints:
 ────────────────────────────────────────
-GET  /api/health              Health check
-GET  /api/stats               Combined statistics
-GET  /api/events              List events (status=pending|completed|expired|all)
-GET  /api/events/:id          Get single event
-POST /api/events/:id/complete Mark as complete
-DELETE /api/events/:id        Delete/reject event
-GET  /api/messages            Argus processed messages
-POST /api/webhook/whatsapp    WhatsApp webhook
-POST /api/context-check       Check URL context
+GET  /api/health                  Health check
+GET  /api/stats                   Combined statistics
+GET  /api/events                  List events (?status=discovered|scheduled|...)
+GET  /api/events/:id              Get single event
+POST /api/events/:id/set-reminder Schedule event (discovered → scheduled)
+POST /api/events/:id/snooze       Snooze event (body: {minutes: 30})
+POST /api/events/:id/ignore       Ignore event
+POST /api/events/:id/complete     Mark as complete
+POST /api/events/:id/dismiss      Dismiss notification
+POST /api/events/:id/acknowledge  Acknowledge reminder
+DELETE /api/events/:id            Delete event permanently
+POST /api/webhook/whatsapp        WhatsApp webhook
+POST /api/context-check           Check URL context
+POST /api/chat                    AI Chat (body: {query, history})
 
 WhatsApp (Evolution PostgreSQL):
 ────────────────────────────────────────
@@ -285,7 +300,7 @@ WebSocket: ws://localhost:3000
   <script>
     const API = '';
     let logs = [];
-    let currentFilter = 'pending';
+    let currentFilter = 'discovered';
 
     document.querySelectorAll('.nav-item').forEach(function(item) {
       item.addEventListener('click', function() { showSection(item.dataset.section); });
@@ -325,6 +340,12 @@ WebSocket: ws://localhost:3000
     }
 
     function clearLogs() { logs = []; renderLogs(); }
+
+    function escapeHtml(text) {
+      var div = document.createElement('div');
+      div.textContent = text || '';
+      return div.innerHTML;
+    }
 
     function showToast(title, body, eventId) {
       var container = document.getElementById('toast-container');
@@ -421,14 +442,14 @@ WebSocket: ws://localhost:3000
 
         var recentHtml = events.slice(0, 5).map(function(e) {
           var actions = getEventActions(e, false);
-          return '<tr><td>' + (e.title || 'Untitled') + '</td><td>' + (e.location || '-') + '</td><td><span class="badge badge-' + e.status + '">' + e.status + '</span></td><td><div class="btn-group">' + actions + '</div></td></tr>';
+          return '<tr><td>' + escapeHtml(e.title || 'Untitled') + '</td><td>' + escapeHtml(e.location || '-') + '</td><td><span class="badge badge-' + e.status + '">' + e.status + '</span></td><td><div class="btn-group">' + actions + '</div></td></tr>';
         }).join('');
         document.getElementById('recent-events').innerHTML = recentHtml || '<tr><td colspan="4" class="empty-state">No events</td></tr>';
 
         var tableHtml = events.map(function(e) {
           var actions = getEventActions(e, true);
           var dateStr = e.event_time ? new Date(e.event_time * 1000).toLocaleDateString() : '-';
-          return '<tr><td><strong>' + (e.title || 'Untitled') + '</strong><br><small style="color: var(--text-secondary)">' + (e.description || '') + '</small></td><td>' + (e.location || '-') + '</td><td>' + dateStr + '</td><td><span class="badge badge-' + e.status + '">' + e.status + '</span></td><td><div class="btn-group">' + actions + '</div></td></tr>';
+          return '<tr><td><strong>' + escapeHtml(e.title || 'Untitled') + '</strong><br><small style="color: var(--text-secondary)">' + escapeHtml(e.description || '') + '</small></td><td>' + escapeHtml(e.location || '-') + '</td><td>' + dateStr + '</td><td><span class="badge badge-' + e.status + '">' + e.status + '</span></td><td><div class="btn-group">' + actions + '</div></td></tr>';
         }).join('');
         document.getElementById('events-table').innerHTML = tableHtml || '<tr><td colspan="5" class="empty-state">No events</td></tr>';
       } catch (e) { console.error('Events error:', e); }
@@ -455,23 +476,12 @@ WebSocket: ws://localhost:3000
           var badge = m.fromMe ? '<span class="badge badge-sent">Sent</span>' : '<span class="badge badge-received">Received</span>';
           var content = m.content || '[Media]';
           if (content.length > 100) content = content.substring(0, 100) + '...';
-          return '<tr><td>' + time + '</td><td class="msg-from">' + (m.pushName || '-') + '</td><td class="msg-phone">' + m.phoneNumber + '</td><td class="msg-preview">' + content + '</td><td>' + badge + '</td></tr>';
+          return '<tr><td>' + time + '</td><td class="msg-from">' + escapeHtml(m.pushName || '-') + '</td><td class="msg-phone">' + escapeHtml(m.phoneNumber) + '</td><td class="msg-preview">' + escapeHtml(content) + '</td><td>' + badge + '</td></tr>';
         }).join('');
         document.getElementById('whatsapp-table').innerHTML = html || '<tr><td colspan="5" class="empty-state">No messages</td></tr>';
       } catch (e) {
         document.getElementById('whatsapp-table').innerHTML = '<tr><td colspan="5" class="empty-state">Evolution DB not connected</td></tr>';
       }
-    }
-
-    // Schedule event (approve for reminders)
-    async function scheduleEvent(id) {
-      try {
-        await fetch(API + '/api/events/' + id + '/set-reminder', { method: 'POST' });
-        addLog('success', 'Event #' + id + ' scheduled for reminders');
-        showToast('Event Scheduled', 'You will receive context reminders when visiting related sites');
-        refreshEvents();
-        fetchStats();
-      } catch (e) { addLog('error', 'Failed to schedule: ' + e.message); }
     }
 
     // ============ Event Actions ============
@@ -530,9 +540,8 @@ WebSocket: ws://localhost:3000
       } catch (e) { addLog('error', 'Failed to delete: ' + e.message); }
     }
 
-    // Legacy alias
+    // Legacy aliases
     var rejectEvent = deleteEvent;
-    var dismissEvent = snoozeEvent;
 
     async function testContext() {
       var url = document.getElementById('test-url').value;
@@ -574,6 +583,19 @@ WebSocket: ws://localhost:3000
         addLog('success', 'Message processed: ' + data.eventsCreated + ' events');
         refreshEvents();
         fetchStats();
+      } catch (e) { result.textContent = 'Error: ' + e.message; }
+    }
+
+    async function testChat() {
+      var query = document.getElementById('test-chat').value;
+      var result = document.getElementById('chat-result');
+      if (!query) { result.textContent = 'Please enter a question'; return; }
+      result.textContent = 'Thinking...';
+      try {
+        var res = await fetch(API + '/api/chat', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ query: query }) });
+        var data = await res.json();
+        result.textContent = data.response + '\n\n--- Referenced Events: ' + (data.events ? data.events.length : 0) + ' ---\n' + (data.events || []).map(function(e) { return '#' + e.id + ' ' + e.title + ' (' + e.status + ')'; }).join('\n');
+        addLog('info', 'AI Chat: ' + query.substring(0, 50));
       } catch (e) { result.textContent = 'Error: ' + e.message; }
     }
 
